# ghostcfg

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ghostcfg/: __init__.py  __main__.py  app.py  app.tcss  config_io.py  ghostty.py  schema.py
src/ghostcfg/screens/: __init__.py  color_picker.py  help_screen.py
src/ghostcfg/widgets/: __init__.py  config_panel.py  option_row.py  theme_browser.py  theme_preview.py
tests/: test_config_io.py  test_save_debug.py  test_schema.py  test_ui_logic.py
